<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".Principal">

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_action_search"
        android:title="@string/action_buscar"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_nuevoCliente"
        android:icon="@drawable/ic_action_add_person"
        android:title="@string/action_nuevo_cliente"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_nuevoGasto"
        android:icon="@drawable/ic_action_new"
        android:title="@string/action_nuevo_gasto"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_nuevaFactura"
        android:icon="@drawable/ic_action_new"
        android:title="@string/action_nueva_factura"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_nuevoProducto"
        android:icon="@drawable/ic_action_new"
        android:title="@string/action_nuevo_producto"
        app:showAsAction="ifRoom" />
</menu>
