<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="es.janhout.proyecto.actividades.MostrarCliente">

    <item
        android:id="@+id/action_search"
        android:title="@string/action_buscar"
        android:icon="@drawable/ic_action_search"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="ifRoom" />

    <item android:id="@+id/action_nueva_factura"
        android:title="@string/action_nueva_factura"
        android:icon="@drawable/ic_action_new"
        app:showAsAction="ifRoom"/>

    <item android:id="@+id/action_llamar"
        android:title="@string/action_llamar_telefono"
        android:icon="@drawable/ic_action_llamar_telefono"
        app:showAsAction="ifRoom"/>

    <item android:id="@+id/action_email"
        android:title="@string/action_enviar_correo"
        android:icon="@drawable/ic_action_enviar_email"
        app:showAsAction="ifRoom"/>

    <item android:id="@+id/action_facturas"
        android:title="@string/action_ver_facturas"
        android:icon="@drawable/ic_action_ver_facturas"
        app:showAsAction="ifRoom"/>
</menu>
