<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="es.janhout.proyecto.actividades.NuevaFactura">

    <item
        android:id="@+id/action_search"
        android:title="@string/action_buscar"
        android:icon="@drawable/ic_action_search"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="ifRoom" />

    <item android:id="@+id/action_guardar_factura"
        android:title="@string/action_guardar_factura"
        android:icon="@drawable/ic_action_accept"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_nuevoProducto"
        android:icon="@drawable/ic_action_new"
        android:title="@string/action_nuevo_producto"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_nuevoCliente"
        android:icon="@drawable/ic_action_add_person"
        android:title="@string/action_nuevo_cliente"
        app:showAsAction="ifRoom" />
</menu>
