<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include
            android:id="@+id/dialogo_progreso"
            layout="@layout/progreso"
            android:visibility="gone"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_bottom_login"
                android:src="@drawable/logo" />

            <EditText
                android:id="@+id/etUsuario"
                style="@style/editTextLogin"
                android:hint="@string/usuario"
                android:imeOptions="actionNext"
                android:nextFocusForward="@+id/etPass"/>

            <EditText
                android:id="@+id/etPass"
                style="@style/editTextLogin"
                android:background="@drawable/estilos_edittext_personalizado"
                android:hint="@string/pass"
                android:inputType="textPassword"/>

            <Button
                android:id="@+id/btLogin"
                style="@style/botonPersonalizado"
                android:onClick="login"
                android:text="@string/login" />

            <Button
                android:id="@+id/btRecuperaPass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/bt_recordar"
                android:onClick="recuperaPass"
                android:text="@string/recuperar_pass"
                android:textColor="@color/mi_material_primary"
                android:textSize="16sp" />

            <Button
                android:id="@+id/btVolverInicio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/bt_recordar"
                android:onClick="volverInicio"
                android:text="@string/volver_inicio"
                android:textColor="@color/mi_material_primary"
                android:textSize="16sp" />
        </LinearLayout>
    </FrameLayout>

</RelativeLayout>